tests/compilation/no_named_fields.stderr
error: The equation must contain named fields
 --> tests/compilation/no_named_fields.rs:9:14
  |
9 |     #[derive(Equation)]
  |              ^^^^^^^^
  |
  = note: this error originates in the derive macro `Equation` (in Nightly builds, run with -Z macro-backtrace for more info)
